--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV.fetch("DATABASE_USERNAME", "root") %>
   password: <%= ENV.fetch("DATABASE_PASSWORD", 123456) %>
-  socket: /var/run/mysqld/mysqld.sock
+  socket: <%= ENV.fetch("MYSQL_SOCK", "/var/run/mysqld/mysqld.sock") %>
 
 development:
   <<: *default
